cmake_minimum_required(VERSION 3.21)
project(Basic_C__)

set(CMAKE_CXX_STANDARD 17)

add_executable(d1 d1/d_001.cpp)
add_executable(d2 d1/d_002.cpp)
add_executable(d3 d1/d_003.cpp)
add_executable(d4 d1/d_004.cpp)
add_executable(d_005 d1/d_005.cpp)
add_executable(d_006 d1/d_006.cpp)
add_executable(d_007 d1/d_007.cpp)
add_executable(d_008 d1/d_008.cpp)