cmake_minimum_required(VERSION 3.21)
project(Basic_C__)

set(CMAKE_CXX_STANDARD 17)
include_directories("G:\\Clib")#指定头文件目录
link_directories(G:\\Clib)#指定库文件目录
link_libraries(code_001)#库文件名称
add_executable(d1 d1/d_001.cpp d1/d_077_1.h)
add_executable(d2 d1/d_002.cpp)
add_executable(d3 d1/d_003.cpp)
add_executable(d4 d1/d_004.cpp)
add_executable(d_005 d1/d_005.cpp)
add_executable(d_006 d1/d_006.cpp)
add_executable(d_007 d1/d_007.cpp)
add_executable(d_008 d1/d_008.cpp)
add_executable(d_009 d1/d_009.cpp)
add_executable(d_010 d1/d_010.cpp)
add_executable(d_011 d1/d_011.cpp)
add_executable(d_012 d1/d_012.cpp)
add_executable(d_013 d1/d_013.cpp)
add_executable(d_014 d1/d_014.cpp)
add_executable(d_015 d1/d_015.cpp)
add_executable(d_016 d1/d_016.cpp)
add_executable(d_017 d1/d_017.cpp)
add_executable(d_018 d1/d_018.cpp)
add_executable(d_019 d1/d_019.cpp)
add_executable(d_020 d1/d_020.cpp)
add_executable(d_021 d1/d_021.cpp)
add_executable(d_022 d1/d_022.cpp)
add_executable(d_023 d1/d_023.cpp)
add_executable(d_024 d1/d_024.cpp)
add_executable(d_025 d1/d_025.cpp)
add_executable(d_026 d1/d_026.cpp)
add_executable(d_027 d1/d_027.cpp)
add_executable(d_028 d1/d_028.cpp)
add_executable(d_029 d1/d_029.cpp)
add_executable(d_030 d1/d_030.cpp)
add_executable(d_031 d1/d_031.cpp)
add_executable(d_032 d1/d_032.cpp)
add_executable(d_033 d1/d_033.cpp)
add_executable(d_034 d1/d_034.cpp)
add_executable(d_035 d1/d_035.cpp)
add_executable(d_036 d1/d_036.cpp)
add_executable(d_037 d1/d_037.cpp)
add_executable(d_038 d1/d_038.cpp)
add_executable(d_039 d1/d_039.cpp)
add_executable(d_040 d1/d_040.cpp)
add_executable(d_041 d1/d_041.cpp)
add_executable(d_042 d1/d_042.cpp)
add_executable(d_043 d1/d_043.cpp)
add_executable(d_044 d1/d_044.cpp)
add_executable(d_045 d1/d_045.cpp)
add_executable(d_046 d1/d_046.cpp)
add_executable(d_047 d1/d_047.cpp)
add_executable(d_048 d1/d_048.cpp)
add_executable(d_049 d1/d_049.cpp)
add_executable(d_050 d1/d_050.cpp)
add_executable(d_051 d1/d_051.cpp)
add_executable(d_052 d1/d_052.cpp)
add_executable(d_053 d1/d_053.cpp)
add_executable(d_054 d1/d_054.cpp)
add_executable(d_055 d1/d_055.cpp)
add_executable(d_056 d1/d_056.cpp)
add_executable(d_057 d1/d_057.cpp)
add_executable(d_058 d1/d_058.cpp)
add_executable(d_060 d1/d_060.cpp)
add_executable(d_059 d1/d_059.cpp)
add_executable(d_061 d1/d_061.cpp)
add_executable(d_062 d1/d_062.cpp)
add_executable(d_063 d1/d_063.cpp)
add_executable(d_064 d1/d_064.cpp)
add_executable(d_065 d1/d_065.cpp)
add_executable(d_066 d1/d_066.cpp)
add_executable(d_067 d1/d_067.cpp)
add_executable(d_068 d1/d_068.cpp)
add_executable(d_069 d1/d_069.cpp)
add_executable(d_070 d1/d_070.cpp)
add_executable(d_071 d1/d_071.cpp)
add_executable(d_072 d1/d_072.cpp)
add_executable(d_073 d1/d_073.cpp)
add_executable(d_076 d1/d_076.cpp)
add_executable(d_074 d1/d_074.cpp)
add_executable(d_075 d1/d_075.cpp)
add_executable(d_077 d1/d_077.cpp d1/d_077_1.h d1/d_077_link_01.cpp d1/d_077_link_02.cpp d1/d_077_2.h d1/Role1.h)
add_executable(d_078 d1/d_078.cpp d1/d_078_1.h d1/d_078_link_01.c d1/d_078_2.h)
add_executable(d_079 d1/d_079.cpp)
add_executable(d_080 d1/d_080.cpp)
add_executable(d_081 d1/d_081.cpp)
add_executable(d_082 d1/d_082.cpp d1/d_082_link_01.cpp d1/d_082_1.h)
add_executable(d_083 d1/d_083.cpp )
add_executable(d_084 d1/d_084.cpp d1/d_084_1.h)
add_executable(d_085 d1/d_085.cpp d1/d_085_1.h d1/d_085_link_01.cpp)
add_executable(d_086 d1/d_086.cpp)
add_executable(d_087 d1/d_087.cpp)
add_executable(d_088 d1/d_088.cpp)
add_executable(d_089 d1/d_089.cpp)
add_executable(d_082_link_01 d1/d_082_link_01.cpp)
add_executable(d_090 d1/d_090.cpp d1/Role.cpp)
add_executable(d_091 d1/d_091.cpp d1/Role.cpp)
add_executable(d_100 d1/d_100.cpp)
add_executable(d_092 d1/d_092.cpp)
add_executable(d_093 d1/d_093.cpp)
add_executable(d_094 d1/d_094.cpp)
add_executable(d_095 d1/d_095.cpp)
add_executable(d_096 d1/d_096.cpp)
add_executable(d_097 d1/d_097.cpp)
add_executable(d_098 d1/d_098.cpp)
add_executable(d_099 d1/d_099.cpp d1/Role1.h d1/Skill1.h)
add_executable(d_101 d1/d_101.cpp)
add_executable(d_114 d1/d_114.cpp)
add_executable(d_102 d1/d_102.cpp)
add_executable(d_103 d1/d_103.cpp)
add_executable(d_104 d1/d_104.cpp)